[package]
name = "lau-spatial"
version = "0.1.0"
edition = "2021"
description = "Spatial indexing library — QuadTree, GridHash, and SpatialHash for efficient neighbor queries"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.150"
